RESOLVED FIXED68550
REGRESSION: Crash in RenderBlock::removeFloatingObjectsBelow()
https://bugs.webkit.org/show_bug.cgi?id=68550
Summary REGRESSION: Crash in RenderBlock::removeFloatingObjectsBelow()
mitz
Reported 2011-09-21 11:23:08 PDT
Created attachment 108189 [details] Test case (will crash) <rdar://problem/9768483> The attached test case causes WebKit to crash in RenderBlock::removeFloatingObjectsBelow(). Patch forthcoming.
Attachments
Test case (will crash) (652 bytes, text/html)
2011-09-21 11:23 PDT, mitz
no flags
Check if the floating object set has become empty (3.76 KB, patch)
2011-09-21 11:35 PDT, mitz
darin: review+
mitz
Comment 1 2011-09-21 11:35:42 PDT
Created attachment 108195 [details] Check if the floating object set has become empty
mitz
Comment 2 2011-09-21 11:45:48 PDT
Note You need to log in before you can comment on or make changes to this bug.