<rdar://problem/9768483> REGRESSION: Crash in RenderBlock::removeFloatingObjectsBelow() https://bugs.webkit.org/show_bug.cgi?id=68550

Reviewed by Darin Adler.

Source/WebCore:

Test: fast/multicol/null-lastFloat-in-removeFloatingObjectsBelow.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::removeFloatingObjectsBelow): Break out of the while() loop when the
floating object set is empty, which can happen if there were no floats on previous lines
(in which case, lastFloat is 0).

LayoutTests:

* fast/multicol/null-lastFloat-in-removeFloatingObjectsBelow-expected.txt: Added.
* fast/multicol/null-lastFloat-in-removeFloatingObjectsBelow.html: Added.



Canonical link: https://commits.webkit.org/84499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95654 268f45cc-cd09-0410-ab3c-d52691b4dbfc